--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic
+gunicorn
 flask
 flask_admin
 flask_restful
 flask_sqlalchemy
 multiprocessing_logging
+json-logging-py
 jsonschema
 sqlalchemy
