Docker data persistance, partial commit 1

--- a/gunicorn/gunicorn.conf
+++ b/gunicorn/gunicorn.conf
@@ -1,7 +1,8 @@
 import os
 
 DEFAULT = {
-    'bind': ':80'
+    'workers': 4,
+    'preload_app': True
 }
 
 for k, v in os.environ.items():
@@ -12,3 +13,5 @@ for k, v in os.environ.items():
 for k, v in DEFAULT.items():
     if k not in locals():
         locals()[k] = v
+
+locals()['bind'] = ':80'
