--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,11 @@ variables:
 
 services:
   - name: docker:dind
+- |
+  apk update && apk add openssl
+  mkdir -p /etc/docker/certs.d/g2-inc.net
+  curl https://portal.g2-inc.com/sites/default/files/G2-Root-CA.pem > /etc/docker/certs.d/g2-inc.net/ca.crt || exit
+
 
 stages:
   - build
