--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ services:
       - |
           apk update && apk add openssl
           mkdir -p /etc/docker/certs.d/g2-inc.net
-          curl https://portal.g2-inc.com/sites/default/files/G2-Root-CA.pem > /etc/docker/certs.d/g2-inc.net/ca.crt || exit
+          wget -O - https://portal.g2-inc.com/sites/default/files/G2-Root-CA.pem > /etc/docker/certs.d/g2-inc.net/ca.crt || exit
 
 
 stages:
