--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,18 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+### VirtualEnv template
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
+
 # Custom Ignore
 .idea/*
 *.sqlite
