--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,18 @@
     "bootstrap": "^4.1.3",
     "fs": "0.0.1-security",
     "history": "^4.7.2",
+    "html-react-parser": "^0.4.7",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "list-react-files": "^0.2.0",
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-file-reader": "^1.1.4",
+    "react-json-editor-ajrm": "^2.5.6",
     "react-json-pretty": "^1.7.9",
     "react-moment": "^0.8.1",
+    "react-new-window": "0.0.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
@@ -58,6 +62,7 @@
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
     "svg-inline-loader": "^0.8.0",
+    "uglify-js-brunch": "^2.10.0",
     "webpack": "^3.5.5",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-combine-loaders": "^2.0.3",
