GUI updates and code splitting, server additions for updated gui

--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,10 @@
     "history": "^4.7.2",
     "html-react-parser": "^0.4.7",
     "jquery": "^3.3.1",
-    "list-react-files": "^0.2.0",
     "moment": "^2.22.2",
     "react": "^16.4.2",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.4.2",
-    "react-file-reader": "^1.1.4",
     "react-json-editor-ajrm": "^2.5.6",
     "react-json-pretty": "^1.7.9",
     "react-moment": "^0.8.1",
@@ -37,7 +36,6 @@
     "redux-api-middleware": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-persist-transform-filter": "0.0.18",
     "string-format": "^2.0.0",
     "vkbeautify": "^0.99.3"
   },
@@ -50,7 +48,6 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "extract-loader": "^3.0.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -59,14 +56,11 @@
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react-hot-loader": "^4.3.11",
     "style-loader": "^0.23.1",
-    "svg-inline-loader": "^0.8.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.20.2",
     "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.2",
-    "webpack-combine-loaders": "^2.0.3",
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4"
   }
