--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,12 @@
     "react": "^16.4.2",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.4.2",
+    "react-drag-and-drop": "^2.4.0",
     "react-json-editor-ajrm": "^2.5.6",
     "react-json-pretty": "^1.7.9",
     "react-moment": "^0.8.1",
     "react-new-window": "0.0.9",
+    "react-popout": "^1.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
