--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
-    "fs": "0.0.1-security",
+    "connected-react-router": "^5.0.1",
+    "file-saver": "^2.0.0",
     "history": "^4.7.2",
     "html-react-parser": "^0.4.7",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
+    "named-regexp-groups": "^1.0.3",
     "react": "^16.4.2",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.4.2",
@@ -29,7 +31,6 @@
     "react-popout": "^1.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "2.0.4",
     "react-toastify": "^4.3.0",
     "react-transition-group": "^2.4.0",
@@ -38,6 +39,8 @@
     "redux-api-middleware": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "string-format": "^2.0.0",
     "vkbeautify": "^0.99.3"
   },
