--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-toastify": "^4.3.0",
+    "react-toggle-button": "^2.2.0",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
