Update for JADN pkg update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,6 @@ Build:
   - rm ../server/webApp/static/index.html
   # Server Build
   - cd ../server
-  - docker build -t $IMAGE_NAME -f Dockerfile .
+  - docker build -t $IMAGE_NAME -f docker-image .
   - docker tag $IMAGE_NAME $IMAGE_NAME:v0.7.0
   - docker push $IMAGE_NAME
