--- a/client/package.json
+++ b/client/package.json
@@ -40,8 +40,6 @@
     "redux-api-middleware": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.2",
     "string-format": "^2.0.0",
     "vkbeautify": "^0.99.3"
   },
@@ -54,15 +52,19 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "download-file": "^0.1.5",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^2.0.0",
+    "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "less": "^3.8.1",
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "request-promise": "^4.2.2",
     "style-loader": "^0.23.1",
+    "sync-request": "^6.0.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.20.2",
     "webpack-bundle-tracker": "^0.3.0",
