Code splitting and code/file cleanup, copy of jadn-editor and theme-switcher form OIF GUI

--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,17 +1,14 @@
 {
     "plugins": [
-        "@babel/plugin-proposal-object-rest-spread"
+        "plugin-syntax-dynamic-import",
+        "transform-object-rest-spread"
     ],
     "presets": [
         [
-	        "@babel/preset-env",
-		    {
-		        "targets": {
-				    "node": "current",
-				    "uglify": true // <<< this line
-				}
-			}
-		],
-		"@babel/preset-react"
-	],
+            "env",
+            {
+                modules: false
+            }
+        ]
+    ]
 }
