--- a/client/package.json
+++ b/client/package.json
@@ -46,12 +46,14 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "csso": "^3.5.1",
     "download-file": "^0.1.5",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^2.0.0",
