--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM ccoe-gitlab-registry.hii-tsd.com/screamingbunny/docker/plus:alpine-python3
+FROM harbor.olympus.mtn/screamingbunny/docker/alpine-python3
 
 LABEL name="JADN Lint" \
 vendor="OpenC2" \
