--- a/client/package.json
+++ b/client/package.json
@@ -23,13 +23,14 @@
     "html-react-parser": "^1.4.5",
     "named-regexp-groups": "^1.0.5",
     "react": "^17.0.2",
-    "react-bootswatch-theme-switcher": "https://github.com/czack425/react-bootswatch-theme-switcher",
+    "react-bootswatch-theme-switcher": "https://github.com/screambun/react-bootswatch-theme-switcher",
     "react-dom": "^17.0.2",
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-loader": "^4.13.0",
     "react-json-editor": "https://github.com/czack425/react-json-editor",
     "react-json-pretty": "^2.2.0",
+    "react-markdown": "^8.0.3",
     "react-new-window": "^0.2.1",
     "react-popout": "^3.0.2",
     "react-redux": "^7.2.6",
@@ -43,6 +44,7 @@
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.20",
     "redux-thunk": "^2.4.1",
+    "remark-gfm": "^3.0.1",
     "string-format": "^2.0.0",
     "uuid": "^8.3.2",
     "vkbeautify": "^0.99.3"
@@ -127,6 +129,7 @@
     "jest": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
+    "onchange": "^7.1.0",
     "optimize-css-assets-webpack-plugin": "6.0.1",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
