--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": " ^6.1.2",
     "@fortawesome/free-solid-svg-icons": " ^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "buffer": "^6.0.3",
     "connected-react-router": "^6.9.3",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
