--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,6 @@
-# ./jadnschema-0.1.0-py2.py3-none-any.whl
+# ./JADN_Schema-0.1.0-py2.py3-none-any.whl
 flask==2.2.2
 flask_restful==0.3.9
 gunicorn==20.1.0
-json-logging-py
-jsonschema
 lxml  # Use version form JADNSchema
-multiprocessing_logging
 weasyprint==57.0
