--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,12 @@
     "html-react-parser": "^1.4.5",
     "named-regexp-groups": "^1.0.5",
     "react": "^17.0.2",
-    "react-bootswatch-theme-switcher": "https://github.com/screambun/react-bootswatch-theme-switcher",
+    "react-bootswatch-theme-switcher": "git+https://github.com/screambun/react-bootswatch-theme-switcher.git",
     "react-dom": "^17.0.2",
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-loader": "^4.13.0",
-    "react-json-editor": "https://github.com/czack425/react-json-editor",
+    "react-json-editor": "git+https://github.com/czack425/react-json-editor.git",
     "react-json-pretty": "^2.2.0",
     "react-markdown": "^8.0.3",
     "react-new-window": "^0.2.1",
