--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,14 +7,16 @@ version="2.0" \
 description="This is the JADN Lint container"
 
 ADD requirements.txt /tmp/
-ADD JADN-*-py2.py3-none-any.whl /tmp/
+ADD jadnschema-*-py2.py3-none-any.whl /tmp/
 ADD webApp /opt/jadn_lint/webApp
 ADD gunicorn /opt/jadn_lint/gunicorn
 
 # Package installation
 # Packages - https://pkgs.alpinelinux.org/packages
 RUN apk add --no-cache \
-    g++ gcc libxslt-dev \
+    g++ \
+    gcc \
+    libxslt-dev \
     build-base \
     python3-dev \
     py3-lxml \
@@ -25,18 +27,27 @@ RUN apk add --no-cache \
     freetype-dev \
     lcms2-dev \
     openjpeg-dev \
+    pango-dev \
     tiff-dev \
     tk-dev \
     tcl-dev \
     harfbuzz-dev \
-    fribidi-dev && \
+    fribidi-dev \
+    # Wheezyprint dependencies
+    fontconfig \
+    ttf-freefont \
+    font-noto \
+    terminus-font && \
+#
+# Wheezyprint font config \
+fc-cache -f && \
 #
 # Logs folder
 mkdir -p /logs/ && \
 #
 # Requirements install
 pip install -r /tmp/requirements.txt && \
-pip install /tmp/JADN-*-py2.py3-none-any.whl && \
+pip install /tmp/jadnschema-*-py2.py3-none-any.whl && \
 # Cleanup
 apk del build-base python3-dev && \
 rm -rf /var/cache/apk/* *.tar.gz* /usr/src /root/.gnupg /tmp/*
