--- a/client/package.json
+++ b/client/package.json
@@ -13,50 +13,50 @@
     "watch": "onchange -d 5000 --verbose './src/**/*.*' -- yarn run build-dev"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": " ^6.1.2",
-    "@fortawesome/free-solid-svg-icons": " ^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "buffer": "^6.0.3",
     "connected-react-router": "^6.9.3",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
     "history": "^4.10.1",
-    "html-react-parser": "^1.4.5",
-    "named-regexp-groups": "^1.0.5",
+    "html-react-parser": "^1.4.14",
+    "named-regexp-groups": "^1.0.6",
     "react": "^17.0.2",
-    "react-bootswatch-theme-switcher": "git+https://github.com/screambun/react-bootswatch-theme-switcher.git",
+    "react-bootswatch-theme-switcher": "https://github.com/screambun/react-bootswatch-theme-switcher.git#commit=816571b419787a39e92eaa0091c0b0b376da1994",
     "react-dom": "^17.0.2",
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
-    "react-hot-loader": "^4.13.0",
-    "react-json-editor": "git+https://github.com/czack425/react-json-editor.git",
+    "react-hot-loader": "^4.13.1",
+    "react-json-editor": "https://github.com/czack425/react-json-editor.git#commit=291f3afa2d63e3730cd3ebcbffef17a1e20d7555",
     "react-json-pretty": "^2.2.0",
     "react-markdown": "^8.0.3",
-    "react-new-window": "^0.2.1",
+    "react-new-window": "^0.2.2",
     "react-popout": "^3.0.2",
-    "react-redux": "^7.2.6",
-    "react-router": "^5.2.1",
-    "react-toastify": "^9.0.7",
-    "react-transition-group": "^4.4.2",
+    "react-redux": "^7.2.9",
+    "react-router": "^5.3.4",
+    "react-toastify": "^9.1.1",
+    "react-transition-group": "^4.4.5",
     "reactstrap": "^8.10.1",
     "redux": "^4.2.0",
     "redux-api-middleware": "^3.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.20",
-    "redux-thunk": "^2.4.1",
+    "redux-thunk": "^2.4.2",
     "remark-gfm": "^3.0.1",
     "string-format": "^2.0.0",
     "uuid": "^8.3.2",
     "vkbeautify": "^0.99.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/eslint-parser": "^7.18.9",
+    "@babel/core": "^7.20.2",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.18.9",
+    "@babel/plugin-proposal-decorators": "^7.20.2",
     "@babel/plugin-proposal-do-expressions": "^7.18.6",
-    "@babel/plugin-proposal-export-default-from": "^7.18.9",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-proposal-function-bind": "^7.18.9",
     "@babel/plugin-proposal-function-sent": "^7.18.6",
@@ -70,87 +70,89 @@
     "@babel/plugin-proposal-throw-expressions": "^7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-react-constant-elements": "^7.18.9",
+    "@babel/plugin-transform-react-constant-elements": "^7.20.2",
     "@babel/plugin-transform-react-inline-elements": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^4.7.11",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^28.1.8",
     "@types/js-cookie": "^3.0.2",
-    "@types/node": "^18.6.1",
-    "@types/react": "^17.0.43",
+    "@types/node": "^18.11.9",
+    "@types/react": "^17.0.52",
     "@types/react-bootstrap-table-next": "^4.0.18",
     "@types/react-bootstrap-table2-paginator": "^2.1.2",
-    "@types/react-dom": "^17.0.14",
+    "@types/react-dom": "^17.0.18",
     "@types/react-redux": "^7.1.24",
-    "@types/react-router": "^5.1.18",
+    "@types/react-router": "^5.1.19",
     "@types/redux-api-middleware": "^3.2.3",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^8.3.4",
     "@types/vkbeautify": "^0.99.2",
     "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@types/webpack-env": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "babel-jest": "^28.1.3",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^8.3.0",
     "babel-plugin-dev-expression": "^0.2.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "circular-dependency-plugin": "^5.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
     "download-file": "^0.1.5",
-    "eslint": "^8.20.0",
+    "eslint": "^8.28.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-eslint-plugin": "^4.3.0",
+    "eslint-plugin-eslint-plugin": "^4.4.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-jest": "^26.9.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.1.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
     "jest": "^28.1.3",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.1",
+    "mini-css-extract-plugin": "^2.7.0",
+    "node-sass": "^7.0.3",
     "onchange": "^7.1.0",
     "optimize-css-assets-webpack-plugin": "6.0.1",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^13.0.2",
-    "source-map-explorer": "^2.5.2",
+    "sass-loader": "^13.2.0",
+    "source-map-explorer": "^2.5.3",
     "strict-uri-encode": "^2.0.0",
     "style-loader": "^3.3.1",
     "sync-request": "^6.1.0",
-    "terser-webpack-plugin": "^5.3.3",
-    "typescript": "^4.7.4",
+    "terser-webpack-plugin": "^5.3.6",
+    "typescript": "^4.9.3",
     "uglifycss": "0.0.29",
     "url-loader": "^4.1.1",
-    "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "4.5.0",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "4.7.0",
     "webpack-cli": "^4.10.0",
     "webpack-deadcode-plugin": "^0.1.17",
-    "webpack-dev-server": "^4.9.3",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
   "resolutions": {
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "colors": "1.4.0"
   },
   "engines": {
