--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "buffer": "^6.0.3",
+    "chart.js": "3.9.1",
     "connected-react-router": "^6.9.3",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
     "history": "^4.10.1",
     "html-react-parser": "^1.4.14",
+    "lodash": "^4.17.21",
     "named-regexp-groups": "^1.0.6",
     "react": "^17.0.2",
     "react-bootswatch-theme-switcher": "https://github.com/screambun/react-bootswatch-theme-switcher.git#commit=816571b419787a39e92eaa0091c0b0b376da1994",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^17.0.2",
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
