--- a/client/package.json
+++ b/client/package.json
@@ -26,13 +26,13 @@
     "lodash": "^4.17.21",
     "named-regexp-groups": "^1.0.6",
     "react": "^17.0.2",
-    "react-bootswatch-theme-switcher": "https://github.com/screambun/react-bootswatch-theme-switcher.git",
+    "react-bootswatch-theme-switcher": "git+https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^17.0.2",
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-loader": "^4.13.1",
-    "react-json-editor": "https://github.com/ScreamBun/react-json-editor",
+    "react-json-editor": "git+https://github.com/ScreamBun/react-json-editor",
     "react-json-pretty": "^2.2.0",
     "react-markdown": "^8.0.3",
     "react-new-window": "^0.2.2",
