--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-loader": "^4.13.1",
-    "react-json-editor": "git+https://github.com/ScreamBun/react-json-editor",
+    "react-json-editor": "git+https://git@github.com/screambun/react-json-editor.git",
     "react-json-pretty": "^2.2.0",
     "react-markdown": "^8.0.3",
     "react-new-window": "^0.2.2",
