updated the router and added a home page

--- a/client/package.json
+++ b/client/package.json
@@ -40,9 +40,10 @@
     "react-popout": "^3.0.2",
     "react-redux": "^7.2.9",
     "react-router": "^6.4.5",
+    "react-router-dom": "^6.4.5",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^4.4.5",
-    "reactstrap": "^8.10.1",
+    "reactstrap": "^9.1.5",
     "redux": "^4.2.0",
     "redux-api-middleware": "^3.2.1",
     "redux-logger": "^3.0.6",
