--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,21 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "main": "index.jsx",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --hot --progress --config ./config/webpack.config.dev.babel.js",
     "build": "cross-env NODE_ENV=production webpack --progress --config ./config/webpack.config.prod.babel.js",
-    "build-dev": "cross-env NODE_ENV=development webpack --progress --config ./config/webpack.config.dev.babel.js",
     "analyze": "yarn build && source-map-explorer build/js/*.bundle.min.js",
     "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "lint-errors": "yarn lint --quiet",
-    "test": "cross-env BABEL_DISABLE_CACHE=1 jest",
-    "watch": "onchange -d 5000 --verbose './src/**/*.*' -- yarn run build-dev"
+    "test": "cross-env BABEL_DISABLE_CACHE=1 jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "buffer": "^6.0.3",
-    "chart.js": "3.9.1",
+    "chart.js": "4.0.1",
     "connected-react-router": "^6.9.3",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
@@ -25,12 +23,12 @@
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-bootswatch-theme-switcher": "git+https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
+    "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git#commit=47dc1224224d16008c358c87dfa089c9e3ee0596",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
-    "react-json-editor": "git+https://git@github.com/screambun/react-json-editor.git",
+    "react-json-editor": "https://git@github.com/screambun/react-json-editor.git",
     "react-json-pretty": "^2.2.0",
     "react-popout": "^3.0.2",
     "react-redux": "^8.0.5",
@@ -46,10 +44,10 @@
     "vkbeautify": "^0.99.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.5",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.20.2",
+    "@babel/plugin-proposal-decorators": "^7.20.5",
     "@babel/plugin-proposal-do-expressions": "^7.18.6",
     "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -73,84 +71,63 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@types/file-saver": "^2.0.5",
-    "@types/history": "^4.7.11",
-    "@types/jest": "^28.1.8",
-    "@types/js-cookie": "^3.0.2",
+    "@types/history": "^5.0.0",
+    "@types/jest": "^29.2.4",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.9",
-    "@types/react": "^17.0.52",
-    "@types/react-bootstrap-table-next": "^4.0.18",
-    "@types/react-bootstrap-table2-paginator": "^2.1.2",
-    "@types/react-dom": "^17.0.18",
+    "@types/min-document": "^2.19.0",
+    "@types/node": "^18.11.15",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
     "@types/react-router": "^5.1.19",
     "@types/redux-api-middleware": "^3.2.3",
     "@types/redux-logger": "^3.0.9",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "^9.0.0",
     "@types/vkbeautify": "^0.99.2",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "babel-jest": "^28.1.3",
-    "babel-loader": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "babel-loader": "^9.1.0",
     "babel-plugin-dev-expression": "^0.2.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "circular-dependency-plugin": "^5.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.2",
-    "download-file": "^0.1.5",
-    "eslint": "^8.28.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-compat": "^4.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-eslint-plugin": "^4.4.1",
+    "eslint-plugin-eslint-plugin": "^5.0.6",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.9.0",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "favicons": "^6.2.2",
-    "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
-    "fs-extra": "^10.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "http-proxy-middleware": "^2.0.6",
-    "jest": "^28.1.3",
-    "mini-css-extract-plugin": "^2.7.0",
-    "node-sass": "^7.0.3",
-    "onchange": "^7.1.0",
-    "optimize-css-assets-webpack-plugin": "6.0.1",
-    "prettier": "^2.8.0",
-    "rimraf": "^3.0.2",
+    "jest": "^29.3.1",
+    "min-document": "^2.19.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "node-sass": "^8.0.0",
+    "path": "^0.12.7",
+    "prettier": "^2.8.1",
     "sass-loader": "^13.2.0",
     "source-map-explorer": "^2.5.3",
-    "strict-uri-encode": "^2.0.0",
     "style-loader": "^3.3.1",
-    "sync-request": "^6.1.0",
     "terser-webpack-plugin": "^5.3.6",
-    "typescript": "^4.9.3",
-    "uglifycss": "0.0.29",
+    "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "4.7.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^5.0.1",
     "webpack-deadcode-plugin": "^0.1.17",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
-  },
-  "resolutions": {
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "colors": "1.4.0"
   },
   "engines": {
     "node": ">=14.x",
