--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "buffer": "^6.0.3",
     "chart.js": "3.9.1",
     "connected-react-router": "^6.9.3",
+    "dayjs": "^1.11.7",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
     "history": "^5.3.0",
