--- a/client/package.json
+++ b/client/package.json
@@ -117,6 +117,7 @@
     "node-sass": "^8.0.0",
     "path": "^0.12.7",
     "prettier": "^2.8.1",
+    "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.2.0",
     "source-map-explorer": "^2.5.3",
     "style-loader": "^3.3.1",
