--- a/client/package.json
+++ b/client/package.json
@@ -71,6 +71,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
+    "@babel/runtime": "^7.20.6",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^5.0.0",
     "@types/jest": "^29.2.4",
@@ -129,7 +130,8 @@
     "webpack-cli": "^5.0.1",
     "webpack-deadcode-plugin": "^0.1.17",
     "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "engines": {
     "node": ">=14.x",
