--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
-# ./JADN_Schema-0.1.0-py2.py3-none-any.whl
+./jadnschema-0.2.0-py2.py3-none-any.whl
+# -e /home/matt/.virtualenvs/jadnsandbox/lib/python3.10/site-packages/jadnschema-0.2.1-py3.10.egg
 flask==2.2.2
 flask_restful==0.3.9
 gunicorn==20.1.0
