--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,8 @@
 #./jadnschema-0.2.3-py2.py3-none-any.whl
  -e /home/matt/screamingbunny/Schema/jadnschema
 # -e /home/kaitlyn_hsu/ScreamingBunnyRepo/Schema/jadnschema
+cbor-json==0.0.4
+cbor2==5.4.6
 flask==2.2.2
 flask_restful==0.3.9
 gunicorn==20.1.0
