--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "test": "cross-env BABEL_DISABLE_CACHE=1 jest"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@uiw/react-codemirror": "^4.19.9",
     "buffer": "^6.0.3",
     "chart.js": "4.0.1",
+    "codemirror": "^6.0.1",
     "connected-react-router": "^6.9.3",
     "dayjs": "^1.11.7",
     "fast-deep-equal": "^3.1.3",
