--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
     "test": "cross-env BABEL_DISABLE_CACHE=1 jest"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^6.1.4",
+    "@codemirror/lang-html": "^6.4.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.0.5",
+    "@codemirror/lang-xml": "^6.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@uiw/codemirror-extensions-basic-setup": "^4.19.9",
+    "@uiw/codemirror-extensions-langs": "^4.19.9",
     "@uiw/codemirror-themes-all": "^4.19.9",
     "@uiw/react-codemirror": "^4.19.9",
     "buffer": "^6.0.3",
