--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "history": "^5.3.0",
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
+    "marked": "^4.2.12",
     "react": "^18.2.0",
     "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
     "react-chartjs-2": "^5.0.1",
