--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "html-react-parser": "^3.0.9",
     "lodash": "^4.17.21",
     "marked": "^4.2.12",
+    "plantuml-encoder": "^1.4.0",
     "react": "^18.2.0",
     "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
     "react-chartjs-2": "^5.2.0",
@@ -40,6 +41,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
+    "react-zoom-pan-pinch": "^3.0.4",
     "reactstrap": "^9.1.6",
     "redux": "^4.2.1",
     "redux-api-middleware": "^3.2.1",
