--- a/client/package.json
+++ b/client/package.json
@@ -85,6 +85,7 @@
     "@types/lodash": "^4.14.191",
     "@types/min-document": "^2.19.0",
     "@types/node": "^18.14.0",
+    "@types/plantuml-encoder": "^1.4.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
