--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "chart.js": "4.2.1",
     "codemirror": "^6.0.1",
     "connected-react-router": "^6.9.3",
+    "d3-graphviz": "^5.0.2",
     "dayjs": "^1.11.7",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
@@ -79,6 +80,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@babel/register": "^7.21.0",
     "@babel/runtime": "^7.21.0",
+    "@types/d3-graphviz": "^2.6.7",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^5.0.0",
     "@types/jest": "^29.4.0",
