--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ cbor-json==0.0.4
 cbor2==5.4.6
 flask==2.2.2
 flask_restful==0.3.9
+flask-restplus==0.13.0
 gunicorn==20.1.0
 jadn==0.6.17
 lxml  # Use version from JADNSchema
