--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,7 +3,7 @@
 # -e /home/kaitlyn_hsu/ScreamingBunnyRepo/Schema/jadnschema
 cbor-json==0.0.4
 cbor2==5.4.6
-flask==2.2.2
+Flask==2.3.1
 flask_restful==0.3.9
 flask-restplus==0.13.0
 gunicorn==20.1.0
