--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-popout": "^3.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.2",
     "react-zoom-pan-pinch": "^3.0.7",
     "reactstrap": "^9.1.9",
