--- a/client/package.json
+++ b/client/package.json
@@ -32,8 +32,9 @@
     "plantuml-encoder": "^1.4.0",
     "react": "^18.2.0",
     "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-drag-and-drop": "^3.0.0",
     "react-helmet-async": "^1.3.0",
     "react-json-editor": "https://git@github.com/screambun/react-json-editor.git",
     "react-json-pretty": "^2.2.0",
