--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
     "react-dom": "^18.2.0",
     "react-drag-and-drop": "^3.0.0",
+    "react-dragula": "^1.1.17",
     "react-helmet-async": "^1.3.0",
     "react-json-editor": "https://git@github.com/screambun/react-json-editor.git",
     "react-json-pretty": "^2.2.0",
