--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,7 @@
     "marked": "^9.1.1",
     "plantuml-encoder": "^1.4.0",
     "react": "^18.2.0",
-    "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git",
+    "react-bootswatch-theme-switcher": "https://git@github.com/screambun/react-bootswatch-theme-switcher.git#commit=c52c163e193bda603e560d4ea25950cf9b87f63e",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
