--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.8",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
     "@uiw/codemirror-themes-all": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "bootstrap": "5.3.2",
     "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
     "connected-react-router": "^6.9.3",
