--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-intersection-observer": "^9.5.2",
     "react-json-editor": "https://git@github.com/screambun/react-json-editor.git",
     "react-json-pretty": "^2.2.0",
     "react-popout": "^3.0.2",
