--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "@types/react-virtualized-auto-sizer": "^1.0.3",
+    "@types/react-window": "^1.8.8",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
     "@uiw/codemirror-themes-all": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
@@ -47,6 +49,9 @@
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
+    "react-window-infinite-loader": "^1.0.9",
     "react-zoom-pan-pinch": "^3.2.0",
     "redux": "^4.2.1",
     "redux-api-middleware": "^3.2.1",
