--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "connected-react-router": "^6.9.3",
     "d3-graphviz": "^5.1.0",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.0.8",
     "fast-deep-equal": "^3.1.3",
     "file-saver": "^2.0.5",
     "history": "^5.3.0",
@@ -91,6 +92,7 @@
     "@babel/runtime": "^7.23.2",
     "@faker-js/faker": "^8.2.0",
     "@types/d3-graphviz": "^2.6.8",
+    "@types/dompurify": "^3.0.5",
     "@types/file-saver": "^2.0.5",
     "@types/history": "^5.0.0",
     "@types/jest": "^29.5.5",
