--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "@types/jstoxml": "^2.0.4",
     "@types/react-virtualized-auto-sizer": "^1.0.3",
     "@types/react-window": "^1.8.8",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
@@ -34,6 +35,7 @@
     "html-react-parser": "^4.2.2",
     "immutability-helper": "^3.1.1",
     "json-schema-faker": "^0.5.3",
+    "jstoxml": "^5.0.0",
     "lodash": "^4.17.21",
     "marked": "^9.1.1",
     "plantuml-encoder": "^1.4.0",
