failing on schema

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
-./whls/jadnschema-0.2.20-py2.py3-none-any.whl
+# ./whls/jadnschema-0.2.20-py2.py3-none-any.whl
 # ./whls/jadn_xml-1.4.0-py2.py3-none-any.whl
-# -e /home/matt/screamingbunny/Schema/jadnschema
+-e /home/matt/screamingbunny/Schema/jadnschema
 -e /home/matt/workspace/oscal/sb-jadn-xml-util
 # -e /home/kaitlyn_hsu/ScreamingBunnyRepo/Schema/jadnschema
 cbor-json==0.0.4
