--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "@stdlib/assert-is-regexp-string": "^0.2.1",
     "@types/react-virtualized-auto-sizer": "^1.0.3",
     "@types/react-window": "^1.8.8",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
