--- a/client/package.json
+++ b/client/package.json
@@ -60,8 +60,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "uuid": "^9.0.1",
-    "vkbeautify": "^0.99.3",
-    "xspattern": "^3.1.0"
+    "vkbeautify": "^0.99.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
