--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@
 # -e /home/kaitlyn_hsu/ScreamingBunnyRepo/Schema/jadnschema
 cbor-diag==1.0.2
 cbor-json==0.0.4
+docker==7.1.0
 cbor2
 Flask==2.3.1
 flask-cors==3.0.10
