--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -15,6 +15,7 @@ flask_restful==0.3.9
 flask-restplus==0.13.0
 gunicorn==20.1.0
 jadn==0.6.22
+json2xml==5.0.2
 lxml  # Use version from JADNSchema
 weasyprint==57.0
 toml==0.10.2
