--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,13 @@
-#  ./whls/jadnschema-0.2.20-py2.py3-none-any.whl
+ ./whls/jadnschema-0.2.20-py2.py3-none-any.whl
  ./whls/jadn_xml-1.5.0-py2.py3-none-any.whl
  ./whls/jadn_json-1.1.0-py2.py3-none-any.whl
--e /home/matt/screamingbunny/Schema/jadnschema
+# -e /home/matt/screamingbunny/Schema/jadnschema
 # -e /home/matt/workspace/sb-jadn-xml-util
 # -e /home/matt/workspace/sb-jadn-json-util
 # -e /home/kaitlyn_hsu/ScreamingBunnyRepo/Schema/jadnschema
-cbor-diag==1.0.2
+cbor2 # Use version from JADNSchema
 cbor-json==0.0.4
 docker==7.1.0
-cbor2
 Flask==2.3.1
 flask-cors==3.0.10
 flask_restful==0.3.9
@@ -17,5 +16,5 @@ gunicorn==20.1.0
 jadn==0.6.22
 json2xml==5.0.2
 lxml  # Use version from JADNSchema
-weasyprint==57.0
 toml==0.10.2
+weasyprint==57.0
