--- a/server/webApp/data/version.toml
+++ b/server/webApp/data/version.toml
@@ -1,7 +1,7 @@
 major = 0
-minor = 11
-bug = 2
+minor = 0
+bug = 444
 build_hash = ""
-build_date_in_millis = 1717707259266
-full_version = "v0.11.2_1717707259266"
-app_mode = "local"
+build_date_in_millis = 1719594859943
+full_version = "v0.0.444_1719594859943"
+app_mode = "container"
