whl and docker updates to ubuntu

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM screambunn/alpine_python
+FROM ubuntu:22.04
 
 LABEL name="JADN Sandbox" \
 vendor="OpenC2" \
@@ -15,53 +15,29 @@ ADD webApp /opt/jadn_sandbox/webApp
 ADD gunicorn /opt/jadn_sandbox/gunicorn
 ADD cbor_files /opt/jadn_sandbox/
 
-# Package installation
-# Packages - https://pkgs.alpinelinux.org/packages
-RUN apk add --no-cache \
-    g++ \
-    gcc \
-    libxslt-dev \
-    build-base \
-    python3-dev \
-    py3-lxml \
-    libxslt-dev \
-    # Pillow dependencies
-    jpeg-dev \
-    zlib-dev \
-    freetype-dev \
-    lcms2-dev \
-    openjpeg-dev \
-    pango-dev \
-    tiff-dev \
-    tk-dev \
-    tcl-dev \
-    harfbuzz-dev \
-    fribidi-dev \
-    # Wheezyprint dependencies
-    fontconfig \
-    ttf-freefont \
-    font-noto \
-    terminus-font && \
-    # Wheezyprint font config \
-    fc-cache -f
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        git \
+        openssl \
+        python3 \
+        python3-pip \
+        python3-cffi \
+        python3-brotli \
+        libpango-1.0-0 \
+        libpangoft2-1.0-0 \
+        ruby \
+        rsync \
+        && \
+    apt-get clean
 
-# Install Ruby Gem
-# RUN apk update
-# RUN apk add ruby
-# RUN gem install cbor-diag
+# Ruby Gem
+RUN gem install cbor-diag
 
 # Logs folder
 RUN mkdir -p /logs/ 
 
-
 # Requirements install
-RUN pip install -r ./requirements.txt
-# RUN pip install ./$jadnschema
-# RUN pip install ./$jadnxml
-
-# Cleanup
-RUN apk del build-base python3-dev && \
-rm -rf /var/cache/apk/* *.tar.gz* /usr/src /root/.gnupg /tmp/*
+RUN pip install --no-cache-dir -r requirements.txt
 
 ENV FLASK_ENV production
 
