--- a/server/webApp/app_data/version.toml
+++ b/server/webApp/app_data/version.toml
@@ -2,6 +2,6 @@ major = 0
 minor = 14
 bug = 0
 build_hash = ""
-build_date_in_millis = 1745418497929
-full_version = "v0.14.0_1745418497929"
-app_mode = "container"
+build_date_in_millis = 1745932420483
+full_version = "v0.14.0_1745932420483"
+app_mode = "local"
