minor ui updates

--- a/server/webApp/app_data/version.toml
+++ b/server/webApp/app_data/version.toml
@@ -4,4 +4,4 @@ bug = 0
 build_hash = ""
 build_date_in_millis = 1757514425610
 full_version = "v0.15.0_1757514425610"
-app_mode = "container"
+app_mode = "local"
